--- a/src/index.html
+++ b/src/index.html
@@ -9,9 +9,9 @@
     <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet" />
   </head>
   <body>
-    <!-- <div class="app-loader">
+    <div class="app-loader">
       <img src="assets/images/seamless-logo.png" alt="Seamless Logo" />
-    </div> -->
+    </div>
     <app-root></app-root>
     <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
     <script>
